# ccu-cli

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.beads/: issues.jsonl
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.github/workflows/: release.yml
llms/: sync.sh
llms/aiohomematic/: architecture.md  common_operations.md  data_flow.md  event_bus.md  getting_started.md  glossary.md
src/ccu_cli/: __init__.py  backend.py  cli.py  client.py  config.py  rega.py  schedule.py  xmlrpc.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_rega.py  test_schedule.py  test_xmlrpc.py
