[project]
name = "ccu-cli"
version = "0.1.0"
description = "CLI tool for interacting with CCU-Jack on RaspberryMatic/CCU3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "tomli>=2.3.0",
]

[project.scripts]
ccu = "ccu_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccu_cli"]
