[project]
name = "ccu-cli"
version = "0.2.0"
description = "CLI tool for interacting with RaspberryMatic/CCU3"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohomematic",
    "click>=8.3.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "tomli>=2.3.0",
]

[project.scripts]
ccu = "ccu_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccu_cli"]
