[project]
name = "ccu-cli"
version = "0.2.0"
description = "CLI tool for interacting with RaspberryMatic/CCU3"
authors = [
    { name = "Malte Sussdorff" },
]
readme = "README.md"
requires-python = ">=3.14"
keywords = ["ccu", "raspberrymatic", "homematic", "cli", "home-automation"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Utilities",
]
dependencies = [
    "aiohomematic>=2026.4.10",
    "click>=8.3.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "tomli>=2.3.0",
]

[project.scripts]
ccu = "ccu_cli.cli:main"

[project.urls]
Homepage = "https://github.com/sussdorff/ccu-cli"
Repository = "https://github.com/sussdorff/ccu-cli"
Issues = "https://github.com/sussdorff/ccu-cli/issues"
Changelog = "https://github.com/sussdorff/ccu-cli/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "git-cliff>=2.12.0",
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccu_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/ccu_cli",
    "/README.md",
    "/CHANGELOG.md",
    "/cliff.toml",
]
